tests/compile-fail/literal-and-semi.stderr
error: unexpected end of input, expected identifier
 --> $DIR/literal-and-semi.rs:2:5
  |
2 |     fixed_macro::fixed!(123.45:);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
